tests/errors/literals/literal-too-many-params.fn
---
Description: Literal declared with more than one parameter
Expected: compile error
---

type BadLiteral
{
    init{}

    literal toomany(a: i32, b: i32) {}
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
